--- a/config/config_ODE_Lorenz_constant_batch_all.yaml
+++ b/config/config_ODE_Lorenz_constant_batch_all.yaml
@@ -1,8 +1,8 @@
 dataset:
-  name: PDE_KS
+  name: ODE_Lorenz
 model:
   burn_in_split: 0.4
-  constant_value: 7.110103706234888
+  constant_value: -16.534236116049982
   method: constant
   name: CTF_NaiveBaselines
   seed: 0
