--- a/tuning_config/config_Lorenz_8.yaml
+++ b/tuning_config/config_Lorenz_8.yaml
@@ -6,6 +6,7 @@ model:
                      # proportion of train data to use for training
   seed: 0
   n_trials: 10
+  pair_id: 8
 hyperparameters:
   constant:
     type: uniform
