--- a/tuning_config/config_KS.yaml
+++ b/tuning_config/config_KS.yaml
@@ -1,12 +1,12 @@
 dataset:
-  name: ODE_Lorenz
-  pair_id: [8]
+  name: PDE_KS
+  pair_id: [1,2,3,4,5,6,7,8,9]
 model:
   name: CTF_NaiveBaselines
   train_split: 0.8   # float in (0.7 and 1.0)
                      # proportion of train data to use for training
   seed: 0
-  n_trials: 10
+  n_trials: 3
 hyperparameters:
   constant:
     type: uniform
